@@ -1,6 +1,8 @@
 &nbsp;
 
-:<i>This is a work in progress, and it is generated by <tt>scripts/specdoc.rb</tt> in the RubyGems CVS.  Any changes to this page will be lost.  Contact GavinSinclair if you have suggestions.</i>
+:<i>This page is generated by <tt>scripts/specdoc.rb</tt> in the RubyGems CVS.  Any changes to this page will be lost.  Contact GavinSinclair if you have suggestions.</i>
+
+!timestamp
 
 = Introduction =
 
@@ -16,7 +18,6 @@ See also:
 
 * CreateAGemInTenMinutes
 * CreateAGemUsingRake
-* <i>XXX:Need another page to cover other aspects of gem specifications, like ... ???</i>
 
 
 [#toc]
